# eOS

./: .gitignore  CMakeLists.txt  README.md  boot.S  boot7.S  boot8.S  build.sh  clean.sh  eos.elf  kernel.c  test
bootLoader/: mbr1.asm
kernal/: kernalMain.c
